# pico_pio

./: Cargo.toml  README.md  backup.py  backup_demo.py  build.rs  debug_demo.py  distance_debug_pio.py  distance_demo.py  distance_pio.py  flow_chart_1.md  flow_chart_2.md  main.py  pio_plots_pico1.ipynb  pio_plots_pico2.ipynb  pymakr.conf  reference.md  sound.py  sound_demo.py  sound_pio.py  theremin.py  thman.code-workspace  useful.md
.cargo/: config.toml
examples/: backup_demo.rs  distance.pio  distance_debug.pio  distance_debug.rs  distance_demo.rs  sound_demo.rs  theremin.rs  theremin_no_pio.rs
src/: backup.pio  lib.rs  main.rs  sound.pio
