[package]
categories = []
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
name = "theremin"
readme = "README.md"
version = "0.1.0"

[lib]

[dependencies]
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
cortex-m-rt = "0.7.5"
cortex-m = "0.7.7"
embassy-executor = { version = "0.6.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-sync = { version = "0.6.1" }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-futures = { version = "0.1.1" }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
derive_more = { version = "1.0.0", default-features = false, features = [
    "debug",
    "display",
    "error",
    "from",
] }
heapless = "0.8.0"
pio-proc = "0.2.2"
pio = "0.2.1"
fixed = "1.28.0"
libm = "0.2.11"

[build-dependencies]
pio-proc = "0.2.2"
pio = "0.2.1"


[profile.dev]
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "unwind"
rpath = false


[profile.test]
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
